# BotCompanyBenchmarkProblem003

./: .gitignore  .tbc_pdb_meta  1.current.out  1.test.out  ACTUAL_VS_EXPECTED.md  CMakeLists.txt  PHASE5_FINAL_REPORT.md  PRIORITY_FIXES.md  SUBMISSION_READY.md  TBC_TASK.md  TEST_SUMMARY.md  UPDATED_test_failure_analysis.md  analyze_timing.sh  calculate_stats.py  error.actual.out  error.test.out  main.cpp  roadmap.md  run_phase5_validation.sh  spec.md  test_analysis.md  test_failure_analysis.md
phase5_validation_outputs/: 2.time  6_run1.time  6_run2.time  6_run3.time  bigger_run1.time  bigger_run2.time  bigger_run3.time
workspace/elena/: independent_evaluation.md  note.md
workspace/workspace/marcus/: architecture_review.md  note.md
workspace/workspace/maya/: note.md
workspace/workspace/sophia/: note.md  requirements_completeness_analysis.md
